tests/build/fail/widget/declared_prop_does_not_exist2.stderr
error[E0432]: unresolved import `margin`
 --> $DIR/declared_prop_does_not_exist2.rs:8:9
  |
8 |         margin = 0;
  |         ^^^^^^ use of undeclared crate or module `margin`

error: cannot determine resolution for the macro `self::__p_margin::code_gen`
 --> $DIR/declared_prop_does_not_exist2.rs:8:9
  |
8 |         margin = 0;
  |         ^^^^^^
  |
  = note: import resolution is stuck, try simplifying macro imports
